# devmm

./: .copier-answers.yml  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.agents/commands/: build.md  plan.md  spec.md
.agents/subagents/: architect.md  product-owner.md
.claude/: settings.json
.github/workflows/: ci.yml
.opencode/: opencode.jsonc
devmm/: __init__.py  _nep49.py
devmm/_core/: buffer.py  device.py  dtypes.py  layout.py  memory_resource.py  registry.py  stream.py  tensor.py
devmm/_dlpack/: _abi.py  export.py
devmm/_runtimes/: _discovery.py  _gpulib.py  base.py  cpu.py  cuda.py  rocm.py
devmm/integrations/: __init__.py  _support.py  cupy.py  numba.py  numpy.py  rmm.py
devmm/mrs/: __init__.py  cpu.py  cuda.py  rocm.py
devmm/testing/: __init__.py  _conformance.py  mr_conformance.py
docs/: api.md  architecture.md  harness-usage.md  style.md  testing.md  tool-bootstrap.md
docs/adr/: 0002-task-runner-make-over-just.md  0003-gpu-suite-waiver-for-0.1.0.md
scripts/: fmt-file.sh  verify.sh
specs/: devmm-design.md  devmm-implementation-plan.md
specs/2026-07-p00-scaffold/: plan.md  spec.md  tasks.md
specs/2026-07-p01-dtypes-device/: plan.md  spec.md  tasks.md
specs/2026-07-p02-layout/: plan.md  spec.md  tasks.md
specs/2026-07-p03-stream-memory-resource/: plan.md  spec.md
specs/2026-07-p04-cpu-mrs/: plan.md  spec.md
specs/2026-07-p05-buffer-registry/: plan.md  spec.md
specs/2026-07-p06-dlpack-abi/: plan.md  spec.md  tasks.md
specs/2026-07-p07-export-tensor-empty/: plan.md  spec.md  tasks.md
specs/2026-07-p08-runtimes-cpu/: plan.md  spec.md  tasks.md
specs/2026-07-p09-cuda/: plan.md  spec.md  tasks.md
specs/2026-07-p10-rocm/: plan.md  spec.md  tasks.md
specs/2026-07-p11-integrations/: plan.md  spec.md  tasks.md
specs/2026-07-p12-conformance-docs-release/: plan.md  spec.md  tasks.md
src/devmm/: __init__.py
src/devmm/_core/: __init__.py  buffer.py  layout.py  registry.py  stream.py
src/devmm/_dlpack/: __init__.py  export.py
src/devmm/_runtimes/: __init__.py  _hostcopy.py  base.py  cpu.py  cuda.py  rocm.py
src/devmm/integrations/: __init__.py  cupy.py  numba.py  rmm.py
src/devmm/mrs/: cpu.py
src/devmm/testing/: __init__.py  (+2 more)
tests/: _cuda_fakes.py  _dlpack_utils.py  _gpu_fakes.py  _integration_fakes.py  conftest.py  test_buffer.py  test_cpu_mrs.py  test_cuda_gpu.py  test_cuda_mrs.py  test_cuda_runtime.py  test_cupy_mr.py  test_device.py  test_dlpack_abi.py  test_dlpack_lifecycle.py  test_dlpack_negotiation.py  test_dlpack_refusals.py  test_dlpack_roundtrip.py  test_docs.py  test_dtypes.py  test_dtypes_numpy.py  test_empty.py  test_gpu_mrs.py  test_gpu_runtime.py  test_import_hygiene.py  test_integrations_cupy.py  test_integrations_gpu.py  test_integrations_numba.py  test_integrations_numpy.py  test_integrations_rmm.py  test_integrations_support.py  test_layout.py  test_layout_numpy.py  test_memory_resource.py  test_numpy_handler_mr.py  test_packaging.py  test_public_api.py  test_recording_mr.py  test_registry.py  test_rocm_gpu.py  test_runtimes.py  (+4 more)
tests/_abi_oracle/: README.md  abi_oracle.c
work/: devmm-design.md
work/2026-07-p00-scaffold/: plan.md  spec.md  tasks.md
work/2026-07-p01-dtypes-device/: plan.md  spec.md  tasks.md
work/2026-07-p02-layout/: plan.md  spec.md  tasks.md
work/2026-07-p03-stream-memory-resource/: plan.md  spec.md  tasks.md
work/2026-07-p04-cpu-mrs/: plan.md  spec.md  tasks.md
work/2026-07-p05-buffer-registry/: plan.md  spec.md  tasks.md
work/2026-07-p06-dlpack-abi/: plan.md  spec.md  tasks.md
work/2026-07-p07-export-tensor-empty/: plan.md  spec.md  tasks.md
work/2026-07-p08-runtimes-cpu/: plan.md  spec.md  tasks.md
work/2026-07-p09-cuda/: plan.md  spec.md  tasks.md
work/2026-07-p10-rocm/: plan.md  spec.md  tasks.md
work/2026-07-p11-integrations/: plan.md  spec.md  tasks.md
work/2026-07-p12-conformance-docs-release/: plan.md  spec.md  tasks.md
(+1 files in other folders)
