[project]
name = "devmm"
version = "0.1.0"
description = "Device Memory Manager — a cross-platform tensor memory allocator interface for Python"
readme = "README.md"
requires-python = ">=3.12"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
authors = [{ name = "grAItools" }]
keywords = ["dlpack", "cuda", "rocm", "gpu", "memory", "allocator", "tensor", "array-api"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
# Zero required dependencies: the CPU memory resources and the whole DLPack
# export layer are stdlib-only (see design §8). Everything else is an extra.
dependencies = []

[project.optional-dependencies]
# `import rmm` targeting CUDA. The wheel is CUDA-version-suffixed upstream;
# pin the suffix that matches your toolkit (e.g. rmm-cu11).
cuda = ["rmm-cu12"]
# hipMM ships an `rmm`-named module for ROCm; index availability is best-effort.
rocm = ["amd-hipmm"]
cupy = ["cupy"]
numba = ["numba"]
# Libraries needed to exercise DLPack round-trips in the test suite (§9).
test = ["numpy", "array-api-strict"]

[project.urls]
Homepage = "https://github.com/grAItools/devmm"
Repository = "https://github.com/grAItools/devmm"

# Third-party device runtimes (Metal, oneAPI, ...) register here without
# touching core (see design §4.1).
[project.entry-points."devmm.runtimes"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["devmm"]

# ---------------------------------------------------------------------------
# Dev tooling (installed into the `dev` dependency group by `uv sync`)
# ---------------------------------------------------------------------------
[dependency-groups]
dev = [
    "ruff",
    "pytest",
    "pytest-cov",
    "hypothesis",
    "mypy",
]

# ---------------------------------------------------------------------------
# Mypy — strict types are part of every gate (`make verify` / `make gate-N`)
# ---------------------------------------------------------------------------
[tool.mypy]
strict = true
files = ["devmm", "tests"]

# ---------------------------------------------------------------------------
# Ruff — linter + formatter (the project's `make lint` / `make fmt` gate)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "PIE"]

[tool.ruff.lint.per-file-ignores]
# Re-export modules intentionally expose names without using them.
"**/__init__.py" = ["F401"]

# ---------------------------------------------------------------------------
# Coverage — release-gate thresholds run through `make coverage` (>= 90%
# overall, >= 95% on devmm/_core + devmm/_dlpack, measured on the Linux CI
# leg). Everything left uncovered is excluded below or carries an inline
# reasoned `# pragma: no cover`.
# ---------------------------------------------------------------------------
[tool.coverage.report]
exclude_also = [
    # Debug formatting only; free to change, asserted nowhere.
    "def __repr__",
    # Abstract seams overridden by each platform binding.
    "raise NotImplementedError",
    # Windows-only branches; exercised on the Windows CI leg, which is not
    # the coverage-measuring job.
    'if sys\.platform == "win32":',
]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
testpaths = ["tests"]
